tests/main_tests/ui/wrap_ref_fn_lt_err.stderr
error[E0759]: `reff` has lifetime `'a` but it needs to satisfy a `'static` lifetime requirement
 --> tests/main_tests/ui/wrap_ref_fn_lt_err.rs:5:5
  |
4 | const fn foo<'a>(reff: &'a u8) -> &'static Wrapping<u8> {
  |                        ------ this data with lifetime `'a`...
5 |     wrap_ref(reff, constmuck::IsTW!())
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ...is captured and required to live as long as `'static` here
